--- a/data-raw/vignettes/_OLD_EQ5D_TTU.Rmd
+++ b/data-raw/vignettes/_OLD_EQ5D_TTU.Rmd
@@ -161,7 +161,7 @@ params_ls <- list(candidate_covar_nms_chr = c("d_sex_birth_s", "d_age",  "d_sexu
   TTU::write_report(params_ls = params_ls,
                     paths_ls = paths_ls,
                     R_fl_nm_1L_chr = paths_ls$R_fl_nm_1L_chr,
-                    rprt_nm_1L_chr = "Main_Analysis_Rprt",
+                    rprt_nm_1L_chr = "AAA_PMRY_ANLYS_MTH",
                     abstract_args_ls = NULL,
                     header_yaml_args_ls = header_yaml_args_ls,
                     rprt_lup = rprt_lup)
@@ -178,8 +178,8 @@ TTU::write_rprt_with_rcrd(path_to_outp_fl_1L_chr = paste0(paths_ls$output_data_d
                      use_fake_data_1L_lgl = use_fake_data_1L_lgl,
                      subtitle_1L_chr = "Results Report 1: TTU Models (Primary Analysis)",
                      rprt_subtitle_1L_chr = "Methods Report 2: Reporting Program (Primary Analysis).",
-                     rprt_nm_1L_chr = "TS_TTU_Mdls_Smry",
-                     rcrd_nm_1L_chr = "Write_Rprt_Rcrd",
+                     rprt_nm_1L_chr = "AAA_TTU_MDL_CTG",
+                     rcrd_nm_1L_chr = "AAA_RPRT_WRTNG_MTH",
                      output_type_1L_chr = output_types_ls$supplementary_1L_chr,
                      rprt_output_type_1L_chr = output_types_ls$supplementary_1L_chr,
                      nbr_of_digits_1L_int = nbr_of_digits_1L_int,
@@ -204,13 +204,13 @@ if(!is.null(dv_ls)){
   params_ls %>%
     TTU::write_report(paths_ls = paths_ls,
                       R_fl_nm_1L_chr = paths_ls$R_fl_nm_1L_chr,
-                      rprt_nm_1L_chr = "Share_Outp_Rprt",
+                      rprt_nm_1L_chr = "AAA_SHARING_MTH",
                       abstract_args_ls = NULL,
                       header_yaml_args_ls = header_yaml_args_ls,
                       rprt_lup = TTU::transform_rprt_lup(rprt_lup, 
                                                          add_suplry_rprt_1L_lgl = F,
                                                          add_sharing_rprt_1L_lgl = T))
-  ready4use::write_fls_to_dv_ds(dss_tb = tibble::tibble(ds_obj_nm_chr = "Share_Outp_Rprt",
+  ready4use::write_fls_to_dv_ds(dss_tb = tibble::tibble(ds_obj_nm_chr = "AAA_SHARING_MTH",
                                                         title_chr = params_ls$subtitle_1L_chr),
                                 dv_nm_1L_chr = dv_ls$primary_dv_chr[1],
                                 ds_url_1L_chr = dv_ls$primary_dv_chr[2],
@@ -261,8 +261,8 @@ TTU::write_rprt_with_rcrd(path_to_outp_fl_1L_chr = here::here(paths_ls$path_from
                           use_fake_data_1L_lgl = use_fake_data_1L_lgl,
                           subtitle_1L_chr = "Results Report 2: TTU Models (Secondary Analysis A)",
                           rprt_subtitle_1L_chr = "Methods Report 5: Reporting Program (Secondary Analysis A).",
-                          rprt_nm_1L_chr = "TS_TTU_Mdls_Smry",
-                          rcrd_nm_1L_chr = "Write_Rprt_Rcrd",
+                          rprt_nm_1L_chr = "AAA_TTU_MDL_CTG",
+                          rcrd_nm_1L_chr = "AAA_RPRT_WRTNG_MTH",
                           output_type_1L_chr = output_types_ls$supplementary_1L_chr,
                           rprt_output_type_1L_chr = output_types_ls$supplementary_1L_chr,
                           nbr_of_digits_1L_int = nbr_of_digits_1L_int,
@@ -294,13 +294,13 @@ if(!is.null(dv_ls$secondary_1_dv_chr)){
     TTU::write_report(params_ls = params_ls,
                       paths_ls = scndry_paths_ls[names(scndry_paths_ls) != "prmry_analysis_dir_nm_1L_chr"],
                       R_fl_nm_1L_chr = paths_ls$R_fl_nm_1L_chr,
-                      rprt_nm_1L_chr = "Share_Outp_Rprt",
+                      rprt_nm_1L_chr = "AAA_SHARING_MTH",
                       abstract_args_ls = NULL,
                       header_yaml_args_ls = header_yaml_args_ls,
                       rprt_lup = TTU::transform_rprt_lup(rprt_lup, 
                                                          add_suplry_rprt_1L_lgl = F,
                                                          add_sharing_rprt_1L_lgl = T))
-    ready4use::write_fls_to_dv_ds(dss_tb = tibble::tibble(ds_obj_nm_chr = "Share_Outp_Rprt",
+    ready4use::write_fls_to_dv_ds(dss_tb = tibble::tibble(ds_obj_nm_chr = "AAA_SHARING_MTH",
                                                         title_chr = params_ls$subtitle_1L_chr),
                                 dv_nm_1L_chr = dv_ls$primary_dv_chr[1],
                                 ds_url_1L_chr = dv_ls$primary_dv_chr[2],
@@ -348,8 +348,8 @@ TTU::write_rprt_with_rcrd(path_to_outp_fl_1L_chr = here::here(paths_ls$path_from
                           use_fake_data_1L_lgl = use_fake_data_1L_lgl,
                           subtitle_1L_chr = "Results Report 3: TTU Models (Secondary Analysis B)",
                           rprt_subtitle_1L_chr = "Methods Report 8: Reporting Program (Secondary Analysis B).",
-                          rprt_nm_1L_chr = "TS_TTU_Mdls_Smry",
-                          rcrd_nm_1L_chr = "Write_Rprt_Rcrd",
+                          rprt_nm_1L_chr = "AAA_TTU_MDL_CTG",
+                          rcrd_nm_1L_chr = "AAA_RPRT_WRTNG_MTH",
                           output_type_1L_chr = output_types_ls$supplementary_1L_chr,
                           rprt_output_type_1L_chr = output_types_ls$supplementary_1L_chr,
                           nbr_of_digits_1L_int = nbr_of_digits_1L_int,
@@ -381,13 +381,13 @@ if(!is.null(dv_ls$secondary_2_dv_chr)){
     TTU::write_report(params_ls = params_ls,
                       paths_ls = scndry_paths_ls[names(scndry_paths_ls) != "prmry_analysis_dir_nm_1L_chr"],
                       R_fl_nm_1L_chr = paths_ls$R_fl_nm_1L_chr,
-                      rprt_nm_1L_chr = "Share_Outp_Rprt",
+                      rprt_nm_1L_chr = "AAA_SHARING_MTH",
                       abstract_args_ls = NULL,
                       header_yaml_args_ls = header_yaml_args_ls,
                       rprt_lup = TTU::transform_rprt_lup(rprt_lup, 
                                                          add_suplry_rprt_1L_lgl = F,
                                                          add_sharing_rprt_1L_lgl = T))
-      ready4use::write_fls_to_dv_ds(dss_tb = tibble::tibble(ds_obj_nm_chr = "Share_Outp_Rprt",
+      ready4use::write_fls_to_dv_ds(dss_tb = tibble::tibble(ds_obj_nm_chr = "AAA_SHARING_MTH",
                                                         title_chr = params_ls$subtitle_1L_chr),
                                 dv_nm_1L_chr = dv_ls$primary_dv_chr[1],
                                 ds_url_1L_chr = dv_ls$primary_dv_chr[2],
