--- a/vignettes/CSP_EQ5D_TTU.Rmd
+++ b/vignettes/CSP_EQ5D_TTU.Rmd
@@ -208,7 +208,7 @@ All analytic steps are executed with the following function call, which also cre
 ```{r echo = TRUE, eval=FALSE}
 write_report(params_ls = valid_params_ls_ls$params_ls,
                   paths_ls = path_params_ls$paths_ls,
-                  rprt_nm_1L_chr = "Main_Analysis_Rprt",
+                  rprt_nm_1L_chr = "AAA_PMRY_ANLYS_MTH",
                   abstract_args_ls = NULL,
                   header_yaml_args_ls = header_yaml_args_ls)
 ```
