--- a/vignettes/CSP_AQOL6D_TTU.Rmd
+++ b/vignettes/CSP_AQOL6D_TTU.Rmd
@@ -129,6 +129,7 @@ A list of valid input values for our primary analysis is now constructed, princi
 ```{r eval = F}
 valid_params_ls_ls <- make_valid_params_ls_ls(analysis_core_params_ls,
                                                    candidate_covar_nms_chr = c("d_age", "SOFAS", "c_p_diag_s", "c_clinical_staging_s", "d_relation_s", "d_studying_working"),
+                                              prefd_covars_chr = "SOFAS",
                                                    ds_tb = ds_tb, 
                                                    maui_params_ls = maui_params_ls,
                                                    path_params_ls = path_params_ls,
