--- a/data-raw/inst/Markdown/_Specify_Scdry_Params.Rmd
+++ b/data-raw/inst/Markdown/_Specify_Scdry_Params.Rmd
@@ -15,6 +15,11 @@ data_tb <- outp_smry_ls$scored_data_tb
 ```
 
 ## Modify parameters from primary analysis
+```{r eval = !is.null(params_ls$rename_lup), echo = !is.null(params_ls$rename_lup)}
+data_tb <- data_tb %>%
+  transform_ds_with_rename_lup(rename_lup = params_ls$rename_lup)
+```
+
 ```{r}
 ds_smry_ls <- params_ls$ds_descvs_ls %>%
   TTU::make_analysis_ds_smry_ls(candidate_covar_nms_chr = params_ls$candidate_covar_nms_chr,
