--- a/vignettes/CSP_AQOL6D_TTU.Rmd
+++ b/vignettes/CSP_AQOL6D_TTU.Rmd
@@ -12,7 +12,6 @@ vignette: >
 
 This vignette is an example of implementing of analysis, reporting and sharing workflow to develop transfer to AQoL-6D health utility models. Some of the initial steps in this example are described in more detail in the [EQ-5D example](CSP_EQ5D_TTU.html).
 ```{r echo = TRUE, message=FALSE}
-library(magrittr)
 library(TTU)
 ```
 
@@ -62,14 +61,14 @@ ds_descvs_ls <- make_ds_descvs_ls(candidate_predrs_chr = c("K6","PHQ9"),#
                                   cohort_descv_var_nms_chr = c("d_age","d_relation_s",
                                                                "d_studying_working",
                                                                "c_p_diag_s","c_clinical_staging_s"),
-                     dictionary_tb = youthvars::make_final_rpln_ds_dict(), 
-                     id_var_nm_1L_chr = "fkClientID", 
-                     msrmnt_date_var_nm_1L_chr = "d_interview_date",
-                     round_var_nm_1L_chr = "round", 
-                     round_vals_chr = c("Baseline", "Follow-up"),
-                     maui_item_pfx_1L_chr = "aqol6d_q", 
-                     utl_wtd_var_nm_1L_chr = "aqol6d_total_w", 
-                     utl_unwtd_var_nm_1L_chr = "aqol6d_total_c")
+                                  dictionary_tb = youthvars::make_final_rpln_ds_dict(), 
+                                  id_var_nm_1L_chr = "fkClientID", 
+                                  msrmnt_date_var_nm_1L_chr = "d_interview_date",
+                                  round_var_nm_1L_chr = "round", 
+                                  round_vals_chr = c("Baseline", "Follow-up"),
+                                  maui_item_pfx_1L_chr = "aqol6d_q", 
+                                  utl_wtd_var_nm_1L_chr = "aqol6d_total_w", 
+                                  utl_unwtd_var_nm_1L_chr = "aqol6d_total_c")
 ```
 
 ### Candidate predictors metadata
@@ -96,28 +95,29 @@ predictors_lup <- make_pt_TTU_predictors_lup(short_name_chr = c(ds_descvs_ls$can
 We also need to provide information specific to the MAUI used to collect the data from which health utility will be derived.
 
 ```{r}
-maui_params_ls <- make_maui_params_ls(maui_itm_short_nms_chr = c("Household tasks", "Getting around","Morbility","Self care","Enjoy close rels","Family rels", "Community involvement","Despair","Worry", "Sad", "Agitated","Energy level","Control", "Coping","Frequency of pain", "Degree of pain","Pain interference","Vision", "Hearing","Communication"),
+maui_params_ls <- make_maui_params_ls(maui_domains_pfcs_1L_chr = "vD",
+                                      maui_itm_short_nms_chr = c("Household tasks", "Getting around","Morbility","Self care","Enjoy close rels","Family rels", "Community involvement","Despair","Worry", "Sad", "Agitated","Energy level","Control", "Coping","Frequency of pain", "Degree of pain","Pain interference","Vision", "Hearing","Communication"),
                                       maui_scoring_fn = youthvars::add_adol6d_scores,
-                    utl_min_val_1L_dbl = 0.03)
+                                      short_and_long_nm = c("AQoL-6D",
+                                                            "Assessment of Quality of Life - Six Dimension"),
+                                      utl_min_val_1L_dbl = 0.03)
 ```
 
-## Candidate model types
-We combine a lookup table of our candidate model types with parameters specific to the analyses to be run to compare the performance of each model.
-
-```{r}
-mdl_smry_ls <- make_mdl_smry_ls(mdl_types_lup = get_cndts_for_mxd_mdls(),
-                                     folds_1L_int = 10L,
-                                     max_nbr_of_boruta_mdl_runs_int = 300L)
-```
-
+## Core parameters
 We create a summary object that contains the core parameters that will be common to most of the analyses we are planning to run.
 
 ```{r echo = TRUE }
 analysis_core_params_ls <- make_analysis_core_params_ls(ds_descvs_ls = ds_descvs_ls,
-                                                             mdl_smry_ls = mdl_smry_ls,
-                                                             output_format_ls = output_format_ls,
-                                                             predictors_lup = predictors_lup,
-                                                             use_fake_data_1L_lgl = use_fake_data_1L_lgl)
+                                                        output_format_ls = output_format_ls,
+                                                        predictors_lup = predictors_lup,
+                                                        candidate_covar_nms_chr = c("d_age", "SOFAS",
+                                                                                    "c_p_diag_s",                                                                                    "c_clinical_staging_s", 
+                                                                                    "d_relation_s",
+                                                                                    "d_studying_working"),
+                                                        prefd_covars_chr = "SOFAS",
+                                                        prefd_mdl_types_chr = c("GLM_GSN_LOG",
+                                                                                "OLS_CLL"),
+                                                        use_fake_data_1L_lgl = use_fake_data_1L_lgl)
 ```
 
 ## Path parameters
@@ -132,14 +132,10 @@ path_params_ls <- make_path_params_ls(use_fake_data_1L_lgl = use_fake_data_1L_lg
 A list of valid input values for our primary analysis is now constructed, principally using the objects created in the preceding steps. The `make_valid_params_ls_ls` checks the naming conventions used in some variables of interest and where necessary (for consistency with reporting templates) modifies the names of these variables.
 
 ```{r eval = F}
-valid_params_ls_ls <- make_valid_params_ls_ls(analysis_core_params_ls,
-                                                   candidate_covar_nms_chr = c("d_age", "SOFAS", "c_p_diag_s", "c_clinical_staging_s", "d_relation_s", "d_studying_working"),
-                                              prefd_covars_chr = "SOFAS",
-                                                   ds_tb = ds_tb, 
-                                                   maui_params_ls = maui_params_ls,
-                                                   path_params_ls = path_params_ls,
-                                                   prefd_mdl_types_chr = c("GLM_GSN_LOG",
-                                                                           "OLS_CLL"))
+params_ls_ls <- make_valid_params_ls_ls(analysis_core_params_ls,
+                                              ds_tb = ds_tb, 
+                                              maui_params_ls = maui_params_ls,
+                                              path_params_ls = path_params_ls)
 ```
 
 # Run analysis
@@ -147,32 +143,24 @@ valid_params_ls_ls <- make_valid_params_ls_ls(analysis_core_params_ls,
 All analytic steps for our primary analysis are executed with the following function call.
 
 ```{r echo = TRUE, eval=FALSE}
-write_report(params_ls = valid_params_ls_ls$params_ls,
-                  paths_ls = path_params_ls$paths_ls,
-                  rprt_nm_1L_chr = "AAA_PMRY_ANLYS_MTH",
-                  abstract_args_ls = NULL,
-                  header_yaml_args_ls = header_yaml_args_ls)
+write_report(params_ls = params_ls_ls$params_ls,
+             paths_ls = path_params_ls$paths_ls,
+             rprt_nm_1L_chr = "AAA_PMRY_ANLYS_MTH",
+             abstract_args_ls = NULL,
+             header_yaml_args_ls = header_yaml_args_ls)
 ```
 
 ## Secondary Analyses 
 We can specify supplementary analyses (that apply the same preferred model types as the primary analysis to different combinations of candidate predictors and covariates) by creating a new predictors lookup table and making a call to the `write_scndry_analysis` function.
 
 ```{r echo = TRUE, eval=FALSE}
-TTU_predictors_lup(make_pt_TTU_predictors_lup(short_name_chr = "SOFAS",
-                                              long_name_chr = c("SOFAS total score"),
-                                              min_val_dbl = 0,
-                                              max_val_dbl = 100,
-                                              class_chr = "integer",
-                                              increment_dbl = 1,
-                                              class_fn_chr = "youthvars::youthvars_sofas",
-                                              mdl_scaling_dbl = 0.01,
-                                              covariate_lgl = F)) %>%
-  write_scndry_analysis(valid_params_ls_ls = valid_params_ls_ls,
-                           candidate_covar_nms_chr = c("d_age", "c_p_diag_s", "c_clinical_staging_s", "d_relation_s", "d_studying_working"),
-                           header_yaml_args_ls = header_yaml_args_ls,
-                           path_params_ls = path_params_ls,
-                           prefd_covars_chr = NA_character_,
-                           reference_1L_int = 1)
+write_scndry_analysis(valid_params_ls_ls = params_ls_ls,
+                      candidate_covar_nms_chr = ds_descvs_ls %>%                                                                             purrr::pluck("cohort_descv_var_nms_chr"),
+                      candidate_predrs_chr = c("SOFAS"),
+                      header_yaml_args_ls = header_yaml_args_ls,
+                      path_params_ls = path_params_ls,
+                      prefd_covars_chr = NA_character_,
+                      reference_1L_int = 1)
   
 ```
 
@@ -186,63 +174,72 @@ rprt_lups_ls <- write_mdl_smry_rprt(header_yaml_args_ls,
                                     output_format_ls = output_format_ls,
                                     reference_int = 0:1,
                                     use_shareable_mdls_1L_lgl = T)
-
 ```
 
 # Share results
 Share the results created in the previous step via an online repository. 
 
-Note: you will need to replace the values assigned to the `dv_ds_nm_and_url_chr` argument with the details of repositories for which you have write permissions - the values supplied in the below call will not work for you. If you do not have write permissions for a dataverse dataset, use `dv_ds_nm_and_url_chr = NULL`.
+Note: you will need to replace the values assigned to the `dv_ds_nm_and_url_chr` argument with the details of dataverse datasets for which you have write permissions - the values supplied in the below call will not work for you. If you do not have write permissions for a dataverse dataset, use `dv_ds_nm_and_url_chr = NULL`. If you are writing results to a dataverse dataset, you will also need to have created a dataverse API key and stored the API key and server values in your local environment. To see how to do this, visit: https://github.com/IQSS/dataverse-client-r
 
-The dataset populated by the below call can be viewed at: https://doi.org/10.7910/DVN/JC6PTV
+The dataset populated by the below call can be viewed at: https://doi.org/10.7910/DVN/D74QMP
 ```{r echo = TRUE, eval=FALSE }
-write_study_outp_ds(dv_ds_nm_and_url_chr = c("firstbounce", # Name of dataverse containing dataset
-                          "https://doi.org/10.7910/DVN/JC6PTV"), # Dataset DOI
-                      rprt_lups_ls = rprt_lups_ls,
-                      output_format_ls = output_format_ls,
-                      path_params_ls = path_params_ls,
-                      use_fake_data_1L_lgl = use_fake_data_1L_lgl)
+dv_ds_nm_and_url_chr <- c("fakes", # Name of dataverse containing dataset - Replace
+                          "https://doi.org/10.7910/DVN/D74QMP") # Dataset DOI - Replace
+write_study_outp_ds(dv_ds_nm_and_url_chr = dv_ds_nm_and_url_chr,
+                    rprt_lups_ls = rprt_lups_ls,
+                    output_format_ls = output_format_ls,
+                    path_params_ls = path_params_ls,
+                    use_fake_data_1L_lgl = use_fake_data_1L_lgl)
 
 ```
 
+# Create manuscript
+The first step to creating a manuscript that provides the scientific summary of the study is to provide some metadata about the study itself.
 
+```{r}
+study_descs_ls <- make_study_descs_ls(coi_1L_chr = "None declared.",
+                                      ethics_1L_chr = "The study was reviewed and granted approval by Awesome University's Human Research Ethics Committee (1111111.1).",
+                                      funding_1L_chr = "The study was funded by Generous Benefactor.",
+                                      params_ls_ls = params_ls_ls,
+                                      sample_desc_1L_chr = "The study sample was recruited from young people aged 12 to 25 years who attended Australian primary care services for mental health related needs between November 2019 to August 2020.",
+                                      time_btwn_bl_and_fup_1L_chr = "three months")
+```
+
+If you want the manuscript to refer to some of the candidate predictors by different names than that provided in the `short_name_chr` column of the `predictors_lup` object defined earlier, you can create a table of name correspondences.
+
+```{r}
+var_nm_change_lup <- tibble::tibble(old_nms_chr = c("PHQ9","GAD7"),
+                                    new_nms_chr = c("PHQ-9", "GAD-7"))
+```
 
 ```{r echo = FALSE, eval=FALSE }
-# Render Scientific Summary
-# if(!use_fake_data_1L_lgl){
-  # var_nm_change_lup <- tibble::tibble(old_nms_chr = c("k10","psychwell"),
-  #                                     new_nms_chr = c("K10", "Winefield wellbeing"))
-study_descs_ls <- make_study_descs_ls(health_utl_nm_1L_chr = "EQ-5D",
-                                           time_btwn_bl_and_fup_1L_chr = "three months",
-                                           predr_ctgs_ls = list(`psychological distress` = c("k10"),
-                                                                `psychological wellbeing` =  c("psychwell")))
-spine_of_results_ls <- make_results_ls_spine(output_data_dir_1L_chr = path_params_ls$paths_ls$output_data_dir_1L_chr,
-                                                  #var_nm_change_lup = var_nm_change_lup,
-                                                  study_descs_ls = study_descs_ls,
-                                                  nbr_of_digits_1L_int = output_format_ls$manuscript_digits_1L_int)
-cs_ts_ratios_tb = tibble::tibble(predr_nm_chr = c("k10","psychwell"),
-                                 ratios_chr = c(paste0("about ",
-                                                       round(spine_of_results_ls$mdl_coef_ratios_ls$`psychological distress`,2)),
-                                                paste0(round(spine_of_results_ls$mdl_coef_ratios_ls$`psychological wellbeing`,2))
-                                 ))
-# ctgl_vars_regrouping_ls = list('Primary Diagnosis' = list(anxdpr = list(name_1L_chr = "anxiety/depression",
-#                                                                           ctgs_chr = c("Anxiety", "Depression", "Depression and Anxiety"))),
-#                                  'Clinical Stage' = list(early = list(name_1L_chr = "early (prior to first episode of a serious mental disorder) clinical stages",
-#                                                                       ctgs_chr = c("0-1a","1b"))))
-sig_covars_some_predrs_mdls_tb = tibble::tibble(covars_ls = list(c("No other confounding factor")
-                                                                 # ,c("sex at birth"),c("primary diagnosis", "clinical staging","age")
-                                                                 ),
-                                                                 predrs_mdls_ls = list(c("either predictor")#, c("K6"),c("anxiety and depression measurements other than PHQ-9")
+spine_of_results_ls <- make_results_ls_spine(output_format_ls,
+                                             params_ls_ls = params_ls_ls,
+                                             path_params_ls = path_params_ls,
+                                             study_descs_ls = study_descs_ls,
+                                             var_nm_change_lup = var_nm_change_lup)
+
+```
+```{r}
+sig_covars_some_predrs_mdls_tb <- tibble::tibble(covars_ls = list(c("No other confounding factor"),
+                                                                 c("sex at birth"),
+                                                                 c("primary diagnosis", 
+                                                                   "clinical staging","age")),
+                                                                 predrs_mdls_ls = list(c("either predictor"), 
+                                                                                       c("K6"),
+                                                                                       c("anxiety and depression measurements other than PHQ-9")
                                                                                        ),
-                                                                 sig_thresh_dbl = c(NA_real_#,0.01,NA_real_
-                                                                                    ),
-                                                                 assn_strgth_chr = c(NA_character_#,NA_character_,"weakly"
+                                                                 sig_thresh_dbl = c(NA_real_,
+                                                                                    0.01,
+                                                                                    NA_real_),
+                                                                 assn_strgth_chr = c(NA_character_,NA_character_,"weakly"
                                                                                      ))
 results_ls <- make_results_ls(spine_of_results_ls,
-                              cs_ts_ratios_tb = cs_ts_ratios_tb,
-                              ctgl_vars_regrouping_ls = NULL,
                               sig_covars_some_predrs_mdls_tb = sig_covars_some_predrs_mdls_tb,
                               sig_thresh_covars_1L_chr = "0.005")
+```
+
+```{r echo = FALSE, eval=FALSE }
 saveRDS(results_ls,paste0(path_params_ls$paths_ls$output_data_dir_1L_chr,"/results_ls.RDS"))
   rmarkdown::render("AQoL_VIH/AQoL_VIH.Rmd",
                     output_format = NULL,
